implemented basic webcam 2 img gen

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ venv/
 !/web/extensions/core/
 /tests-ui/data/object_info.json
 /user/
+workflows/
+comfyui.log
+comfyui.prev.log
+comfyui.prev2.log
